Issue with overflow in mobile

--- a/src/styles/DataSheet.scss
+++ b/src/styles/DataSheet.scss
@@ -26,6 +26,6 @@
     max-height: 0px;
 
     &.Selected {
-        max-height: 1000px;
+        max-height: 1600px;
     }
 }
